--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "module1a"]
 	path = module1a
-	url = ../jhub-module1a/.git
+	url = git@github.com:MechanicalPython/module1a.git
 [submodule "module1b"]
 	path = module1b
 	url = ../jhub-module1b/.git
